# shipshape

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .trivyignore  CHANGELOG.md  LICENSE  Makefile  README.md  Tiltfile  ci.yml  cleanup.cmd  flake.nix  pyproject.toml  quickstart  quickstart.cmd
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: .dockerignore  Dockerfile  requirements.txt
app/src/: config.py  main.py
app/tests/: test_main.py
controller/: .dockerignore  Dockerfile  requirements.txt
controller/src/: __main__.py  controller.py  health.py  kube.py  leader.py  metrics.py
controller/tests/: test_controller.py  test_health.py  test_kube.py  test_leader.py  test_main_entrypoint.py
docs/: deployment-considerations.md  operations.md
docs/ADR/: 0000-template.md  0001-single-namespace-with-name-suffix.md  README.md  (+4 more)
examples/: README.md  api-contract.http  controller-apiserver-cidr-patch.yaml
hack/: check_doc_links.py  check_immutable_images.py  cleanup-local-dev.sh  e2e-kind.sh  e2e-lib.sh  e2e-minikube.sh  load-test-k6.js  validate_deployment_order.py  validate_manifests.py  validate_production_evidence.py  validate_release_metadata.py  validate_trivyignore.py
scripts/: backup-configmaps.sh  bootstrap-dev.ps1  bootstrap-dev.sh  ci-smoke-test.sh  cleanup.ps1  ensure-docker-wsl.sh  ensure-wsl.ps1  manage-images.sh  quickstart.ps1  quickstart.sh  setup-local-registry.sh
workflows/: release.yml
(+80 files in other folders)
